<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pref_current_city">Current city</string>
    <string name="pref_download_more">Download more cities</string>
    <string name="data">Data</string>
    <string name="prefs_title">Options</string>
    <string name="today_title">Today</string>
    <string name="help_title">Help</string>
    <string name="pref_show_all_texts">Show all texts</string>
    <string name="app_name">Astromaximum</string>
    <string name="pick_date">Select date</string>
    <string name="title_date_format">EEE MMM d, yyyy</string>
    <string name="month_abbr_day_date_format">MMM d</string>
    <string name="interpretation_dir">en</string>
    <string name="hour_of">Hour of</string>
    <string name="day">day</string>
    <string name="tithi">Tithi</string>
    <string name="time_uses_24h">N</string>
    <string name="norm_range_whole_day">whole day</string>
    <string name="norm_range_arrow">⇨</string>
    <string name="interp_share">Share</string>
    <string name="avail_periods">Available periods:</string>
    <string name="data_add">Add</string>
    <string name="no_period">No data for this period</string>
    <string name="no_location">No location data for this period</string>
    <string name="buy_period">Buy \""%1$s\"</string>
    <string name="download_location">Download \"%1$s\"</string>
    <string name="downloading">Downloading %1$s&#8230;</string>
    <string name="downloaded">Downloaded: %1$s</string>
    
    <string name="lda_countries_title">Countries - %1$s</string>
    <string name="lda_states_title">States - %1$s</string>
    <string name="lda_cities_title">Cities - %1$s</string>
    
    <string name="all_states">&lt;All states&gt;</string>
    <string name="make_current">Make the city current and go back to start screen?</string>
    
    <string name="si_key_voc">Moon \"Void of Course\"</string>
    <string name="si_key_vc">\"Via Combusta\"</string>
    <string name="si_key_sun_degree">Degree of Sun</string>
    <string name="si_key_moon_sign">Sign of Moon</string>
    <string name="si_key_planet_hour">Planetary Hour</string>
    <string name="si_key_moon_move">Moon Motion</string>
    <string name="si_key_tithi">Tithi</string>
    <string name="si_aspect">Aspect</string>
    <string name="si_retrograde">Retrograde Motion</string>
    
    <string name="interp_key_degree_pass">Planet in Degree</string>
    <string name="interp_key_sign_enter">Planet in Sign</string>
    <string name="interp_key_moon_aspect">Aspect of Moon</string>
    <string name="inter_key_aspect">Aspect</string>
    <string name="pref_custom_time">Use custom time</string>
    <string name="use_custom_time">Highlight events at</string>
    <string name="use_current_time">Highlight events at current time</string>
    <string name="pref_volume_button_navigation">Volume buttons</string>
    <string name="pref_volume_button_navigation_summary">Navigate with volume buttons</string>
    
    <string name="no_aspects">No aspects</string>
    <string name="no_retrograde">No retrograde planets</string>
    <string name="no_vc">No VC</string>
    <string name="no_voc">No VOC</string>
    <string name="no_moon_sign">No Moon sign</string>
    <string name="no_moon_move">No Moon move</string>
    <string name="no_planet_hours">No planet hours</string>
    <string name="no_tithi">No tithi</string>
    <string name="no_sun_degree">No Sun degree</string>
    
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    
    <string-array name="planets">
        <item>Sun</item>
        <item>Moon</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptun</item>
        <item>Pluto</item>
    </string-array>

    <string-array name="planets_retrograde">
        <item>NA</item>
        <item>NA</item>
        <item>Retrograde Mercury</item>
        <item>Retrograde Venus</item>
        <item>Retrograde Mars</item>
        <item>Retrograde Jupiter</item>
        <item>Retrograde Saturn</item>
        <item>Retrograde Uranus</item>
        <item>Retrograde Neptun</item>
        <item>Retrograde Pluto</item>
    </string-array>
    
    <string name="fmt_planet_in_degree">%1$s in %2$d\u00b0 of %3$s</string>

    <string-array name="constell_genitive">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>

    <string name="fmt_planet_in_sign">%1$s in %2$s</string>

    <string-array name="constell_locative">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    <string-array name="planets_genitive">
        <item>Sun</item>
        <item>Moon</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptun</item>
        <item>Pluto</item>
    </string-array>

    <string name="fmt_hour_of_planet">Hour of %1$s</string>

    <string-array name="aspect">
        <item>Conjunction</item>
        <item>Opposition</item>
        <item>Trine</item>
        <item>Square</item>
        <item>Sextile</item>
        <item>Semi-square</item>
    </string-array>

    <string name="fmt_aspect">%1$s %2$s-%3$s</string>
    <string name="start_page_layout">Start Page Layout</string>

    <string-array name="startpage_items">
        <item>Sign of Moon</item>
        <item>Moon Motion</item>
        <item>Tithi</item>
        <item>Planetary Hour</item>
        <item>Degree of Sun</item>
        <item>Aspects</item>
        <item>Retrograde Planets</item>
        <item>Moon Void of Course (VOC)</item>
        <item>Moon on Burnt Path (VC)</item>
    </string-array>

    <string name="retry">Retry</string> <!-- Retry download button -->
    
    <string name="city_delete">Delete city</string>
    <string name="city_info">Information</string>
    
</resources>